our-team: fix styles on Safari

--- a/src/our-team.scss
+++ b/src/our-team.scss
@@ -125,6 +125,7 @@ article > h3 {
     img {
       height: 340px;
       object-fit: contain;
+      width: auto;
     }
   }
 
